Update tittle Kế Hoạch Và Báo Cáo

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SemesterPlan.cshtml
@@ -375,7 +375,7 @@ bool isNotAdvisor = !roles.Contains("CVHT");
     <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header" style="display: flex; justify-content: space-between; width: 100%; align-items: center;">
-                <h5 class="modal-title" id="AddSemesterPlanModalLabel">Thêm Kế Hoạch Học Kỳ</h5>
+                <h5 class="modal-title" id="AddSemesterPlanModalLabel">Thêm Kế Hoạch Năm Học</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
                 <form id="addSemesterPlanForm" method="post" action="/Categories/AddPlan"> 
@@ -565,7 +565,7 @@ bool isNotAdvisor = !roles.Contains("CVHT");
         <div class="modal-content">
             <!-- Modal Header -->
             <div class="modal-header" style="display: flex; justify-content: space-between; width: 100%; align-items: center;">
-                <h5 class="modal-title" id="EditSemesterPlanModalLabel">Chi Tiết Kế Hoạch Học Kỳ</h5>
+                <h5 class="modal-title" id="EditSemesterPlanModalLabel">Chi Tiết Kế Hoạch Năm Học</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
@@ -719,7 +719,7 @@ bool isNotAdvisor = !roles.Contains("CVHT");
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header" >
-                <h5 class="modal-title" id="EditSemesterPlanModalLabel">Chỉnh sửa Kế Hoạch Học Kỳ</h5>
+                <h5 class="modal-title" id="EditSemesterPlanModalLabel">Chỉnh sửa Kế Hoạch Năm Học</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="EditSemesterPlanForm" method="post" action="/Categories/EditPlan">
