Update hidden button

--- a/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
@@ -104,6 +104,7 @@
                                                     data-department="@classItem.Department"
                                                     data-advisor-email="@classItem.Advisor.Email"
                                                     data-student-count="@classItem.StudentCount"
+                                                    title="Cập Nhật"
                                                     onclick="openEditModal(this)">
                                                 <i class="fa-solid fa-pen-to-square custom-icon"></i> 
                                             </button>
@@ -111,6 +112,7 @@
                                                     data-bs-toggle="modal"
                                                     data-bs-target="#DeleteClassModal"
                                                     data-class-id="@classItem.ClassId"
+                                                    title="Xóa"
                                                     onclick="openDeleteModal(this)">
                                                 <i class="fa-solid fa-trash custom-icon"></i> 
                                             </button>
